# news-app

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  demo.sh  feeds.db  go.mod  go.sum  main.py  pyproject.toml
cmd/news-app/: main.go
news_app/: cli.py
news_app/commands/: article.py  feed.py
news_app/models/: __init__.py
news_app/services/: database.py  rss.py  summarizer.py
news_app/tests/: __init__.py  conftest.py  test_database.py  test_rss.py  test_services.py
pkg/db/: db.go
pkg/rss/: rss.go
pkg/ui/: articles.go  detail.go  feeds.go  model.go  ui.go
