[project]
name = "news-app"
version = "0.2.0"
description = "A CLI RSS feed reader application"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "openai>=0.27.0",
    "requests>=2.0.0",
    "beautifulsoup4>=4.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
]

[project.scripts]
news-app = "news_app.cli:cli"

[tool.pytest.ini_options]
testpaths = ["news_app/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=news_app --cov-report=term-missing"
